* Tue Jun 08 2021 Trevor Vaughan <tvaughan@onyxpoint.com> - 3.7.0
- Fixed
  - Added 'rngd' to the default services to never be killed
  - Removed obsolete documentation
- Changed
  - Removed Puppet 5 support

* Sat Dec 19 2020 Chris Tessmer <chris.tessmer@onyxpoint.com> - 3.6.2
- Removed EL6 support

* Wed Sep 16 2020 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 3.6.1-0
- Puppet changed the service provider to return service units whose
  state is static.  Because of this svckill was trying to kill system
  processes.  This change updates the svckill provider to only add
  services the list of running services that are known to be in the
  enabled or disabled state.

* Thu Jan 09 2020 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 3.6.0-0
- Add EL8 support
- Update the upper bound of simp-simplib to < 5.0.0
- Updated service lists:
  - Moved services that were deprecated in el7 from common list
    to RedHat-6 list.
  - Moved family_versions under osfamily just to make it neater.
  - Put more comments in the ignore lists for services.
  - Added new el8 services to RedHat-8.yaml
  - Added RedHat subscription manager services to RedHat OS list.

* Fri Aug 02 2019 Robert Vincent <pillarsdotnet@gmail.com> - 3.6.0-0
- Support puppetlabs/concat 6.x.

* Thu Jun 13 2019 Steven Pritchard <steven.pritchard@onyxpoint.com> - 3.5.0-0
- Add v2 compliance_markup data

* Wed Jun 12 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 3.4.0-0
- Update CI artifacts
- Remove Puppet 4 support
- Add Puppet 6 support

* Wed Jun 12 2019 Robert Clark <rbclark@mitre.org> - 3.4.0-0
- Fix error in README regarding proper svckill exception outside of Hiera

* Mon Mar 04 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 3.3.1-0
- Expanded the upper limit of the concat and stdlib Puppet module versions
- Fixed bad URLs in the README.md

* Tue Oct 02 2018 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 3.3.0-0
- Added Redhat 7.5 services to default service ignore list.